# moang

./: .gitignore  Cargo.toml
content/: index.gmi
infra/: compose.yaml
src/: lib.rs  main.rs  models.rs  schema.rs
src/routes/: create_posts.rs  get_posts.rs  login.rs  mod.rs  status.rs
src/routes/posts/: create_post.rs  delete_post.rs  get_post.rs  get_posts.rs  make_public.rs  mod.rs
src/routes/users/: create_user.rs  delete_user.rs  get_users.rs  mod.rs
