[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"]}
diesel = { version = "2.2.0", features = ["postgres"] }
tokio = { version = "1", features = ["full"] }
validator = { version = "0.18.1", features = ["derive"] }
chrono = "0.4"
jsonwebtoken = "9"
rust-argon2 = "2.1"
uuid = { version = "1", features = ["v4"] }
